// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Message > :props > :closeBtn is a function, () => VNode. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    <b
      class="t-message-close-content"
    >
      x
    </b>
  </span>
</div>
`;

exports[`Message > :props > :closeBtn is a string, equal "关闭". 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    关闭
  </span>
</div>
`;

exports[`Message > :props > :closeBtn is true, render default close button. 1`] = `
<div
  class="t-message t-is-info t-is-closable"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  >
    <svg
      class="t-icon t-icon-close"
      fill="none"
      height="1em"
      style="fill: none;"
      viewBox="0 0 24 24"
      width="1em"
    >
      <g
        id="close"
      >
        <path
          d="M16.9503 7.05029L12.0005 12M12.0005 12L7.05078 16.9498M12.0005 12L16.9503 16.9498M12.0005 12L7.05078 7.05029"
          id="stroke1"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </svg>
  </span>
</div>
`;

exports[`Message > :props > :default is a function, () => <b>这是重要信息</b> 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <b>
    这是重要信息
  </b>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :default is a string, 这是普通信息 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  这是普通信息
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :icon is a function, () => MoreIcon 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      id="more"
    >
      <g
        id="stroke1"
      >
        <path
          d="M11.5 4H12.5V5H11.5V4Z"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
        <path
          d="M11.5 11.5H12.5V12.5H11.5V11.5Z"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
        <path
          d="M11.5 19H12.5V20H11.5V19Z"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </g>
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :icon is false 1`] = `
<div
  class="t-message t-is-info"
>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 2`] = `
<div
  class="t-message t-is-success"
>
  <svg
    class="t-icon t-icon-check-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 3`] = `
<div
  class="t-message t-is-warning"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 4`] = `
<div
  class="t-message t-is-error"
>
  <svg
    class="t-icon t-icon-error-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 5`] = `
<div
  class="t-message t-is-question"
>
  <svg
    class="t-icon t-icon-help-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM11.8265 11.8902C12.2582 11.3593 12.8004 10.9159 13.2365 10.5723C13.7034 10.2045 14.0002 9.63718 14.0002 9C14.0002 7.89543 13.1048 7 12.0002 7C11.131 7 10.3888 7.5551 10.1138 8.33325L9.78055 9.27609L7.89487 8.6096L8.22811 7.66676C8.77675 6.11451 10.2571 5 12.0002 5C14.2094 5 16.0002 6.79086 16.0002 9C16.0002 10.2759 15.4018 11.4125 14.4742 12.1433C14.0426 12.4834 13.6573 12.8088 13.3783 13.1519C13.1038 13.4896 13.0002 13.762 13.0002 14V15.25H11.0002V14C11.0002 13.1334 11.3905 12.4265 11.8265 11.8902ZM11.0001 18.2539V16.25H13.004V18.2539H11.0001Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > :theme info,success,warning,error,question,loading 6`] = `
<div
  class="t-message t-is-loading"
>
  <div
    class="t-loading--center t-size-m t-loading"
  >
    <svg
      class="t-loading__gradient t-icon-loading"
      height="1em"
      size="medium"
      version="1.1"
      viewBox="0 0 12 12"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <foreignobject
        height="12"
        width="12"
        x="0"
        y="0"
      >
        <div
          class="t-loading__gradient-conic"
        />
      </foreignobject>
    </svg>
  </div>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > :props > pure message contains two classes 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-info-circle-filled"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM10.996 8.50002V6.49611H12.9999V8.50002H10.996ZM12.9999 10L12.9999 17.5H10.9999V10L12.9999 10Z"
      fill="currentColor"
    />
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;

exports[`Message > <slot> > <icon> 1`] = `
<div
  class="t-message t-is-info"
>
  <svg
    class="t-icon t-icon-more"
    fill="none"
    height="1em"
    style="fill: none;"
    viewBox="0 0 24 24"
    width="1em"
  >
    <g
      id="more"
    >
      <g
        id="stroke1"
      >
        <path
          d="M11.5 4H12.5V5H11.5V4Z"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
        <path
          d="M11.5 11.5H12.5V12.5H11.5V11.5Z"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
        <path
          d="M11.5 19H12.5V20H11.5V19Z"
          stroke="currentColor"
          stroke-linecap="square"
          stroke-width="2"
        />
      </g>
    </g>
  </svg>
  <span
    class="t-message__close"
  />
</div>
`;
